# boxxy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  package.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: flatpak.yml  nightly.yml
crates/about/: AGENTS.md  Cargo.toml
crates/about/src/: lib.rs
crates/ai_core/: AGENTS.md  Cargo.toml
crates/ai_core/src/: lib.rs  utils.rs
crates/app/: AGENTS.md  Cargo.toml  build.rs
crates/app/src/: main.rs
crates/app_menu/: AGENTS.md  Cargo.toml
crates/app_menu/src/: lib.rs
crates/boxxy_agent/: AGENTS.md  Cargo.toml
crates/boxxy_agent/src/: character_watcher.rs  claw.rs  ipc.rs  lib.rs  main.rs
crates/boxxy_agent/src/claw/: registry.rs
crates/boxxy_agent/src/daemon/: mod.rs
crates/boxxy_agent/src/ipc/: client_tracker.rs  mod.rs
crates/boxxy_apps/: AGENTS.md  Cargo.toml
crates/boxxy_apps/src/: lib.rs
crates/boxxy_apps/src/dialog/: mod.rs
crates/boxxy_apps/src/engine/: mod.rs
crates/boxxy_bookmarks/src/: editor.rs  manager.rs  sidebar.rs  tab.rs
crates/boxxy_claw/: AGENTS.md  Cargo.toml
crates/boxxy_claw/src/: lib.rs
crates/boxxy_claw/src/engine/: agent.rs  context.rs  dispatcher.rs  history_utils.rs  mod.rs  session.rs
crates/boxxy_claw/src/memories/: db.rs  dreaming.rs  extraction.rs  flush.rs  hygiene.rs  mod.rs  tools.rs
crates/boxxy_claw/src/registry/: mod.rs  skills.rs  workspace.rs
crates/boxxy_claw/src/ui/: mod.rs
crates/boxxy_claw_protocol/: AGENTS.md
crates/boxxy_claw_protocol/src/: character_loader.rs  lib.rs
crates/boxxy_claw_ui/: AGENTS.md
crates/boxxy_claw_ui/src/: lib.rs
crates/boxxy_claw_widget/: AGENTS.md  Cargo.toml
crates/boxxy_claw_widget/src/: claw_host.rs  claw_indicator.rs  dispatch.rs  overlay.rs
crates/boxxy_claw_widget/src/msgbar/: autocomplete.rs  history.rs  mod.rs
crates/boxxy_mcp/: Cargo.toml
crates/boxxy_msgbar/: AGENTS.md  Cargo.toml
crates/boxxy_msgbar/src/: autocomplete.rs  history.rs  lib.rs
crates/boxxy_vte/: AGENTS.md  Cargo.toml
crates/boxxy_vte/src/: lib.rs
crates/boxxy_vte/src/engine/: ansi.rs  event.rs  event_loop.rs  index.rs  mod.rs  selection.rs  sync.rs  vi_mode.rs
crates/boxxy_vte/src/engine/grid/: mod.rs  resize.rs  row.rs  storage.rs  tests.rs
crates/boxxy_vte/src/engine/kitty/: mod.rs
crates/boxxy_vte/src/engine/term/: cell.rs  color.rs  mod.rs  search.rs
crates/boxxy_vte/src/engine/tty/: mod.rs  unix.rs
crates/boxxy_vte/src/engine/tty/windows/: blocking.rs  child.rs  conpty.rs  mod.rs
crates/boxxy_vte/src/engine/vte/: ansi.rs  mod.rs
crates/boxxy_vte/src/terminal/: backend.rs  headless.rs  imp.rs  input.rs  mod.rs
crates/command_palette/: AGENTS.md  Cargo.toml
crates/command_palette/src/: lib.rs
crates/core_toolbox/: AGENTS.md  Cargo.toml
crates/core_toolbox/src/: clipboard.rs  file.rs  lib.rs  network.rs  system.rs  utils.rs
crates/core_toolbox/src/search/: mod.rs  tavily.rs  tool.rs
crates/core_widgets/: Cargo.toml
crates/core_widgets/src/: autocomplete.rs  lib.rs  utils.rs
crates/db/: AGENTS.md  Cargo.toml
crates/db/src/: lib.rs  models.rs  store.rs
crates/keybindings/: AGENTS.md  Cargo.toml
crates/keybindings/src/: lib.rs
crates/model_selection/: AGENTS.md  Cargo.toml
crates/model_selection/src/: lib.rs  models.rs  registry.rs
crates/model_selection/src/ui/: dialog.rs  selector.rs
crates/preferences/: AGENTS.md  Cargo.toml
crates/preferences/src/: component.rs  config.rs  lib.rs
crates/preferences/src/about/: mod.rs
crates/preferences/src/advanced/: mod.rs
crates/preferences/src/agents/: mod.rs
crates/preferences/src/apis/: mod.rs
crates/preferences/src/appearance/: mod.rs
crates/preferences/src/characters/: mod.rs
crates/preferences/src/claw_ui/: mod.rs
crates/preferences/src/previews/: mod.rs
crates/scenario_runner/scenarios/: capability_routing.yml  fsm_hard_wake_degraded.yml  parallel_deployer.yml  pubsub_watchdog.yml  resource_lock.yml  sleep_and_reminders.yml  tui_automation.yml
crates/scenario_runner/src/: runner.rs
crates/shortcuts/: AGENTS.md  Cargo.toml
crates/shortcuts/resources/: shortcuts.ui
crates/shortcuts/src/: lib.rs
crates/sidebar/: AGENTS.md  Cargo.toml
crates/sidebar/src/: commands.rs  component.rs  lib.rs  markdown.rs  types.rs  widgets.rs
crates/sys_utils/: AGENTS.md  Cargo.toml
crates/sys_utils/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/terminal/: AGENTS.md  Cargo.toml
crates/terminal/src/: agent_manager.rs  claw_indicator.rs  claw_popover.rs  component.rs  events.rs  lib.rs  overlay.rs  preview.rs  search_bar.rs
crates/terminal/src/pane/: app_menu.rs  badge.rs  claw.rs  claw_host.rs  events.rs  gestures.rs  mod.rs  preview.rs  ui.rs
crates/themes/: AGENTS.md  Cargo.toml  build.rs
crates/themes/assets/: dracula.css  synthwave.css
crates/themes/assets/schemes/: dracula.xml  synthwave.xml
crates/themes/src/: lib.rs  preview.rs  selector.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: registry.rs  widget.rs
crates/viewer/src/parser/: blocks.rs  markdown.rs
crates/viewer/src/renderer/: code.rs  image.rs  mod.rs  text.rs
crates/window/: AGENTS.md  Cargo.toml
crates/window/src/: actions.rs  agent_deployer.rs  app_menu.rs  boxxyclaw_indicator_popover.rs  init.rs  lib.rs  sound.rs  state.rs  tab_menu.rs  ui.rs  updater.rs
docs/: Development.md  GettingStarted.md
flatpak/: dev.boxxy.BoxxyTerminal.desktop  dev.boxxy.BoxxyTerminal.metainfo.xml  dev.boxxy.BoxxyTerminal.yml  play.mii.Boxxy.desktop  play.mii.Boxxy.metainfo.xml  play.mii.Boxxy.yml
resources/: resources.gresource.xml  style.css
resources/characters/kuro/: CHARACTER.toml
resources/characters/levi-kujo/: CHARACTER.toml
resources/characters/niko-una/: CHARACTER.toml
resources/icons/: boxxy-spinner.gpa
resources/prompts/: ai_chat.md  boxxy_app_generator.md  claw.md  memory_expansion.md  memory_flush.md  memory_summarizer.md
resources/ui/: preferences.ui
resources/ui/widgets/: notification_details.ui  notification_pill.ui
scripts/: install.sh
(+30 files in other folders)
