[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
name = "boxxy-app"

[features]
disable-self-update = ["boxxy-window/disable-self-update"]

[dependencies]
tokio.workspace = true
gtk4.workspace = true
libadwaita.workspace = true
anyhow.workspace = true
boxxy-window.workspace = true
boxxy-sys-utils.workspace = true
boxxy-terminal.workspace = true
gdk-pixbuf.workspace = true
gio.workspace = true
gstreamer.workspace = true
env_logger.workspace = true
log.workspace = true
boxxy-preferences = { path = "../preferences" }
boxxy-db = { path = "../db" }
boxxy-claw = { path = "../boxxy_claw" }
boxxy-bookmarks.workspace = true
boxxy-telemetry = { path = "../telemetry" }
sysinfo.workspace = true

[build-dependencies]
glib-build-tools.workspace = true

[[bin]]
name = "boxxy-terminal"
path = "src/main.rs"
