[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
name = "boxxy-apps"

[dependencies]
gtk4.workspace = true
libadwaita.workspace = true
mlua.workspace = true
boxxy-ai-core = { path = "../ai_core" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
rig-core.workspace = true
boxxy-model-selection.workspace = true
boxxy-preferences = { path = "../preferences" }
