[package]
name = "boxxy-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["rustls"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp = { workspace = true, features = ["reqwest", "reqwest-rustls"] }
opentelemetry-http.workspace = true
opentelemetry-stdout.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
log.workspace = true
boxxy-preferences = { path = "../preferences" }
boxxy-db = { path = "../db" }
sqlx = { workspace = true }
lazy_static.workspace = true
async-trait.workspace = true

